<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sizeUpBar">57dp</string>
    <string name="welcome_back">Welcome back to newsApp</string>
    <string name="news">News</string>
    <string name="text_search">search</string>
    <string name="no_internet">No internet connection</string>
    <string name="profile">Profile</string>
    <string name="exit_text_mat_button">Exit</string>
    <string name="sing_in">Sing in</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sing_logo">Sing</string>
    <string name="registration_logo">Registration</string>
    <string name="name">Name</string>
    <string name="continues">continue</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>
    <string name="choose_your_categories">Choose your categories</string>
    <string name="venis_news">Venis news</string>
    <string name="news_of_a_new">news of a new</string>
    <string name="system">System</string>
    <string name="dark">Dark</string>
    <string name="white">White</string>
    <string name="app_theme">App theme</string>
</resources>