<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.choosing.ChoosingCategoryFragment">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:flow_maxElementsWrap="3"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBusiness"
            style="@style/chipCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/business" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEntertainment"
            style="@style/chipCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/entertainment" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipGeneral"
            style="@style/chipCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/general" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHealth"
            style="@style/chipCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/health" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipScience"
            style="@style/chipCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/science" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSports"
            style="@style/chipCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sports" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTechnology"
            style="@style/chipCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/technology" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView5"
        style="@style/textMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/choose_your_categories"
        app:layout_constraintBottom_toTopOf="@+id/filter_chip_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/matButtonGo"
        style="@style/materialButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/continues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_chip_group" />

</androidx.constraintlayout.widget.ConstraintLayout>